<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreferencesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:contentDescription="@string/Logo"
                    app:srcCompat="@drawable/ic_vector_sharecommunity_logo" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/Preferencies"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="36sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutExperiencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-22dp"
                    android:layout_weight="1"
                    app:helperTextEnabled="false"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <TextView
                        android:id="@+id/textViewExperiencia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusableInTouchMode="true"
                        android:text="Experiència_Esportiva"
                        android:textSize="16sp"
                        app:errorEnabled="true" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/radioButtonPrincipiant"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="validateExperience"
                            android:text="Menys de 6 mesos"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/radioButtonIntermedi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="validateExperience"
                            android:text="Entre 6 mesos i 2 anys"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/radioButtonAvançat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="validateExperience"
                            android:text="Més de dos anys"
                            android:textSize="16sp" />

                    </RadioGroup>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-22dp"
                    android:layout_weight="1"
                    app:helperTextEnabled="false"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <TextView
                        android:id="@+id/textViewCategories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusableInTouchMode="true"
                        android:text="CategoriesInterès"
                        android:textSize="16sp"
                        app:errorEnabled="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <CheckBox
                                android:id="@+id/checkBoxForça"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="validateCategories"
                                android:text="Força"
                                android:textSize="16sp" />

                            <CheckBox
                                android:id="@+id/checkBoxIoga"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="validateCategories"
                                android:text="Ioga"
                                android:textSize="16sp" />

                            <CheckBox
                                android:id="@+id/checkBoxRehabilitació"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="validateCategories"
                                android:text="Rehabilitació"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <CheckBox
                                android:id="@+id/checkBoxCardio"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="validateCategories"
                                android:text="Càrdio"
                                android:textSize="16sp" />

                            <CheckBox
                                android:id="@+id/checkBoxEstiraments"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="validateCategories"
                                android:text="Estiraments"
                                android:textSize="16sp" />

                            <CheckBox
                                android:id="@+id/checkBoxPilates"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="validateCategories"
                                android:text="Pilates"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </LinearLayout>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutObjectius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-22dp"
                    android:layout_weight="1"
                    app:helperTextEnabled="false"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false">

                    <TextView
                        android:id="@+id/textViewObjectius"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusableInTouchMode="true"
                        android:text="Objectiu"
                        android:textSize="16sp"
                        app:errorEnabled="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <CheckBox
                                android:id="@+id/checkBoxSalut"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="validateObjectives"
                                android:text="Salut"
                                android:textSize="16sp" />

                            <CheckBox
                                android:id="@+id/checkBoxPerduaPes"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="validateObjectives"
                                android:text="Pèrdua_Pes"
                                android:textSize="16sp" />

                            <CheckBox
                                android:id="@+id/checkBoxResistència"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="validateObjectives"
                                android:text="Resistència"
                                android:textSize="16sp" />

                            <CheckBox
                                android:id="@+id/checkBoxAgilitat"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="validateObjectives"
                                android:text="Agilitat"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <CheckBox
                                android:id="@+id/checkBoxForça2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="validateObjectives"
                                android:text="Força"
                                android:textSize="16sp" />

                            <CheckBox
                                android:id="@+id/checkBoxFlexibilitat"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="validateObjectives"
                                android:text="Flexibilitat"
                                android:textSize="16sp" />

                            <CheckBox
                                android:id="@+id/checkBoxRecuperació"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:onClick="validateObjectives"
                                android:text="Recuperació"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonEnviar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Enviar_Preferencies" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>